# rust-in-action

./: README.md
chapter-1/: README.md
chapter-1/cereals/src/: main.rs
chapter-1/hello2/src/: main.rs
chapter-1/integers/src/: main.rs
chapter-1/penguin/src/: main.rs
chapter-10/channels-intro/src/: main.rs
chapter-10/render-hex/src/: main.rs
chapter-11/fledgeos/: Cargo.toml
chapter-11/fledgeos/src/: main.rs
chapter-2/grep-lite/: Cargo.toml
chapter-2/grep-lite/src/: main.rs
chapter-2/mandelbrot/src/: main.rs
chapter-3/: parse-log  parse-log.rs  random.rs
chapter-3/filebasics/src/: main.rs
chapter-4/: wrap  wrap.rs
chapter-5/cpu/src/: main.rs
chapter-5/data-types/src/: main.rs
chapter-5/float-conversion/: Cargo.toml
chapter-5/float-conversion/src/: main.rs
chapter-6/particles/: Cargo.toml  alloc.tsv
chapter-6/particles/src/: main.rs
chapter-6/virtual-memory/src/: main.rs
chapter-7/actionkv/: Cargo.toml
chapter-7/actionkv/src/: akv_disk.rs  akv_mem.rs  lib.rs
chapter-7/hexdump/src/: main.rs
chapter-7/serde-eg/: Cargo.toml
chapter-7/serde-eg/src/: main.rs
chapter-8/error-type/: Cargo.toml
chapter-8/error-type/src/: main.rs
chapter-8/macgen/src/: main.rs
chapter-8/mget/: Cargo.toml
chapter-8/mget/src/: dns.rs  ethernet.rs  http.rs  main.rs  setup-tap.sh
chapter-8/resolve/: Cargo.toml
chapter-8/resolve/src/: main.rs
chapter-8/rpg/src/: main.rs
chapter-8/std-tcp/: Cargo.toml
chapter-8/std-tcp/src/: main.rs
sjlj/src/: main.rs
