[package]
name = "serde-eg"
version = "0.1.0"
authors = ["Max Crone <code@maxcrone.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = "1.0.144"
serde_cbor = "0.11.2"
serde_derive = "1.0.144"
serde_json = "1.0.85"
